# cctop

./: .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-cctop-implementation.md  2026-03-17-contract-tests.md  2026-03-17-iterm2-integration.md  2026-03-17-llm-summaries.md  2026-03-17-session-name-column.md
docs/superpowers/specs/: 2026-03-17-cctop-design.md  2026-03-17-contract-tests-design.md  2026-03-17-gemini-summaries-design.md  2026-03-17-iterm2-integration-design.md  2026-03-17-session-name-column-design.md  2026-03-18-iterm2-minimized-windows-design.md
src/cctop/: __init__.py  app.py  cli.py  duration.py  models.py
src/cctop/hooks/: __init__.py  cctop-hook.sh  install.py
src/cctop/sources/: events.py  github.py  index.py  iterm2.py  merger.py  sessions.py  summarize.py
src/cctop/widgets/: footer.py  header.py  session_detail.py  session_list.py  session_row.py
tests/: test_app.py  test_contract.py  test_duration.py  test_events_cleanup.py  test_hooks_install.py  test_models.py  test_session_row.py  test_sources_events.py  test_sources_github.py  test_sources_index.py  test_sources_iterm2.py  test_sources_merger.py  test_sources_sessions.py  test_sources_summarize.py
tests/widgets/: test_header.py  test_session_detail.py  test_session_list.py  test_session_row.py
