[project]
name = "claude-cctop"
version = "0.1.0"
description = "A htop-like TUI for monitoring Claude Code sessions in real-time"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yorrick Jansen", email = "yorrick.jansen@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["claude", "claude-code", "tui", "terminal", "monitoring", "sessions", "htop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=3.0",
    "typer>=0.15",
    "pydantic>=2.0",
    "loguru",
    "claude-agent-sdk>=0.1.49",
]

[project.urls]
Homepage = "https://github.com/yorrick/cctop"
Repository = "https://github.com/yorrick/cctop"
Issues = "https://github.com/yorrick/cctop/issues"

[project.scripts]
cctop = "cctop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cctop"]

[tool.hatch.build.targets.wheel.force-include]
"src/cctop/hooks/cctop-hook.sh" = "cctop/hooks/cctop-hook.sh"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
    "pre-commit",
    "textual-dev",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = ["contract: contract tests that run real Claude Code sessions (require claude CLI, cost tokens)"]
addopts = "-m 'not contract'"
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
